tests/positive/pr118c_binary_shift.safe
package pr118c_binary_shift

   type byte is binary (8)

   shifted : byte = byte (128) >> 2

