tests/negative/neg_pr118c_cross_width_binary_mix.safe
package neg_pr118c_cross_width_binary_mix

   value : binary (8) = binary (8) (1) + binary (16) (1)

